<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyProjectSalonApp1.0</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="showPassword">Show Password</string>
    <string name="login">Login</string>
    <string name="fogotPassword">Forgot Password ?</string>
    <string name="Or">Or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="mobile">Mobile: : 076 1234567</string>
    <string name="email_add">Email: jhon123@gmail.com</string>
    <string name="password_re">Confirm Password</string>
    <string name="add_profile_pic">Add Profile Picture</string>
    <string name="register">Register</string>
    <string name="Loginsalon">Login As a Beautician</string>
    <string name="ownerDetails">Owner Details</string>
    <string name="securityDetails">Security Details</string>
    <string name="ownerName">Owner Name</string>
    <string name="address">Address</string>
    <string name="salonDetails">Salon Details</string>
    <string name="addLogo">Add Logo</string>
    <string name="salonName">Salon Name</string>
    <string name="slogan">Slogan</string>
    <string name="next">Next...</string>
    <string name="ContactNumber">Contact Number: 011 2 222 333</string>
    <string name="salonEmail">Official Email</string>
    <string name="locationSet">Set Your Salon Location</string>
    <string name="saveLocation">Save Location</string>
    <string name="create_salon">Create Salon</string>
    <string name="my_salon">My Salon</string>
    <string name="edit_salon">Edit Salon <br />Details</string>
    <string name="appointment">Appointment</string>
    <string name="create_schedule">Create/Edit <br />Schedule</string>
    <string name="create_package">Create/Edit <br />Package</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="nyaccount">My Account</string>
    <string name="logout">Logout</string>
    <string name="open_navi">Open Navigation Drawer</string>
    <string name="close_navi">close Navigation Drawer</string>
    <string name="delete_note">If you  close your salon or what ever reason like the you can delete this salon account using button like below, and plaese follow step by step. </string>
    <string name="delete_account">Delete this account</string>
    <string name="mobile_txt">Mobile</string>
    <string name="request">Request</string>
    <string name="placed">Accepted</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="tt">:</string>
    <string name="close_reason">Reason:</string>
    <string name="closed">Closed</string>
    <string name="save">Save</string>
    <string name="create_package_header">Create Package</string>
    <string name="categories">Category</string>
    <string name="Age">Age</string>
    <string name="duration">Duration</string>
    <string name="mins">Min</string>
    <string name="price">Price</string>
    <string name="lkr">LKR</string>
    <string name="add">Add</string>
    <string name="Remove">Remove</string>
    <string name="package_list">Package List</string>
    <string name="forgot_password_head">Forget <br />Password</string>
    <string name="forgot_password_body">"Provide your account's email for which you want to reset your password"</string>
    <string name="otp">OTP</string>
    <string name="verification">Verification</string>
    <string name="otp_body">Enter one time password sent on</string>
    <string name="otp_email">d.sadaru98@gmail.com</string>
    <string name="verifycode">Verify Code</string>
    <string name="login_popup_body">Email Or Password Wrong..!! or this email does not register in the system,<br /> Please Register or Try again...!</string>
    <string name="try_again">Try Again</string>
    <string name="Add_new_password">Add New Password</string>
    <string name="re_send">Re-send</string>
    <string name="plaese_confirn_password">Place Confirm Password...!</string>
    <string name="salon_sts_pop_hed">Change Your salon Status...! <br/>Are you sure...?</string>

</resources>