<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/warning_popup_layout_design"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/forgot_password_icon" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/login_popup_body"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/try_btn_pop"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/gradient01"
            android:text="@string/try_again"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/regi_btn_pop"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/gradient01"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>